prop case file drop

--- a/Documentation/FileDropAdmin.html
+++ b/Documentation/FileDropAdmin.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>
-      This user guide is intended to walk through how to manage file drops.
+      This user guide is intended to walk through how to manage File Drops.
       Some of the content found in this user guide will pertain to the Client
       Administration tab within Milliman Access Portal (MAP).
     </p>
@@ -16,24 +16,24 @@
     </div>
     <div class="content">
       <p>
-        File drop roles are set within a client. This means that the roles are
+        File Drop roles are set within a client. This means that the roles are
         set in the Client Administration tab of MAP. To set the roles for a
         user of the client, navigate to the Client Administration tab, filter
         to the client by clicking the client card, and then open the user card
         in the rightmost column. The user roles contain
-        <strong>File drop user</strong> and <strong>File drop admin</strong>.
+        <strong>File Drop User</strong> and <strong>File Drop Admin</strong>.
       </p>
       <ul>
         <li>
-          <strong>File drop user: </strong>A user who is capable of uploading,
+          <strong>File Drop User: </strong>A user who is capable of uploading,
           downloading, and deleting content (these permissions are set within
-          a file drop), and can manage their own settings, but cannot view the
-          file drop activity log or user permissions.
+          a File Drop), and can manage their own settings, but cannot view the
+          File Drop activity log or user permissions.
         </li>
         <li>
-          <strong>File drop admin: </strong>A user with the ability to set
-          user permissions at the file drop level. A file drop admin can also
-          view the activity log for the file drop as well as their settings.
+          <strong>File Drop Admin: </strong>A user with the ability to set
+          user permissions at the File Drop level. A File Drop Admin can also
+          view the activity log for the File Drop as well as their settings.
         </li>
       </ul>
     </div>
@@ -45,29 +45,29 @@
       <h3 class="subheading">Creating a File Drop</h3>
       <ol>
         <li>
-          Choose the client that you would like to create a file drop for
+          Choose the client that you would like to create a File Drop for
         </li>
         <li>Click "New File Drop"</li>
         <li>
-          Fill in the file drop name and description (optional) and press
+          Fill in the File Drop name and description (optional) and press
           "Add"
         </li>
       </ol>
       <h3 class="subheading">Editing a File Drop</h3>
       <ol>
-        <li>Navigate to the file drop to edit</li>
+        <li>Navigate to the File Drop to edit</li>
         <li>
-          Click on the blue pencil icon on the file drop card in order to enter edit
+          Click on the blue pencil icon on the File Drop card in order to enter edit
           mode
         </li>
-        <li>Click into the file drop name and/or description to edit</li>
+        <li>Click into the File Drop name and/or description to edit</li>
         <li>Press the green check mark to save</li>
       </ol>
       <h3 class="subheading">Deleting a File Drop</h3>
       <ol>
-        <li>Navigate to the file drop to delete</li>
-        <li>Click on the trash icon on the file drop card</li>
-        <li>Confirm deletion of the file drop</li>
+        <li>Navigate to the File Drop to delete</li>
+        <li>Click on the trash icon on the File Drop card</li>
+        <li>Confirm deletion of the File Drop</li>
       </ol>
     </div>
     <div class="accordion">
@@ -77,7 +77,7 @@
     <div class="content">
       <h3 class="subheading">Adding an Individual User to the File Drop</h3>
       <ol>
-        <li>In the file drop view, navigate to the file drop that you want to add a user to</li>
+        <li>In the File Drop view, navigate to the File Drop that you want to add a user to</li>
         <li>Select the "User Permissions" pane at the right</li>
         <li>Click the pencil icon in the upper right to add User Permissions</li>
         <li>Click the green "Add User" link</li>
@@ -86,43 +86,43 @@
       </ol>
       <h3 class="subheading">Creating a Permission Group</h3>
       <ol>
-        <li>In the file drop view, navigate to the file drop that you want to add user to</li>
+        <li>In the File Drop view, navigate to the File Drop that you want to add user to</li>
         <li>Select the "User Permissions" pane on the right</li>
         <li>Click the pencil icon in the upper right to add User Permissions</li>
         <li>To add a group of users with the same permissions, click "Add Group"</li>
         <li>Choose the user(s) to be added from the dropdowns and select which permissions they should receive between Download, Upload, and Delete</li>
         <li>Press "Save Changes"</li>
       </ol>
-      <p>Note that only users who have been given the role of "File Drop User" from the Client Administration page can be added to the User Permissions for a file drop. Also note that a user can only be assigned once per file drop. This means that if a user is a part of one permission group, they cannot be added to a different permission group for the same file drop.</p>
+      <p>Note that only users who have been given the role of "File Drop User" from the Client Administration page can be added to the User Permissions for a File Drop. Also note that a user can only be assigned once per File Drop. This means that if a user is a part of one permission group, they cannot be added to a different permission group for the same File Drop.</p>
       <h3 class="subheading">Editing a Permission Group</h3>
       <ol>
-        <li>In the file drop view, navigate to the file drop that you want to add user to</li>
+        <li>In the File Drop view, navigate to the File Drop that you want to add user to</li>
         <li>Select the "User Permissions" pane at the right</li>
         <li>Click on the edit icon in the upper right of the User Permissions form</li>
       </ol>
         <ul>
-          <li><strong>Delete a user/permission group: </strong>Pressing the trash icon for a user or permission group will remove permissions for the user/group to the file drop</li>
+          <li><strong>Delete a user/permission group: </strong>Pressing the trash icon for a user or permission group will remove permissions for the user/group to the File Drop</li>
           <li><strong>Add users/permission groups: </strong>Press "Add User" or "Add Group" to create more permission groups</li>
           <li><strong>Remove users from a specific permission group: </strong>Pressing the minus icon next to a user in a permission group will remove that user from the permission group</li>
           <li><strong>Edit permission group name: </strong>Edit a permission group name by clicking into the name and editing it</li>
         </ul>
       <h3 class="subheading">Setting Permissions for a Permission Group</h3>
       <ul>
-        <li>In the file drop view, navigate to the file drop that you want to add a user to</li>
+        <li>In the File Drop view, navigate to the File Drop that you want to add a user to</li>
         <li>Select the "User Permissions" pane on the right</li>
         <li>Click on the edit icon in the upper right of the User Permissions form</li>
         <li>Permissions for all usrs of the group are managed with the check boxes</li>
         <li>
           <strong>Download: </strong>The ability to download files from the
-          file drop
+          File Drop
         </li>
         <li>
           <strong>Upload: </strong>The ability to create folders and upload 
-          files to the file drop
+          files to the File Drop
         </li>
         <li>
           <strong>Delete: </strong>The ability to delete folders and files 
-          from the file drop
+          from the File Drop
         </li>
       </ul>
     </div>
@@ -132,10 +132,10 @@
     </div>
     <div class="content">
         <p>
-            MAP file drop features for uploading, downloading, and deleting folders and
+            MAP File Drop features for uploading, downloading, and deleting folders and
             files are supported using Secure File Transfer Protocol (SFTP). Use of an SFTP
             client application such as FileZilla is the means to interact with the folders
-            and files of a MAP file drop.
+            and files of a MAP File Drop.
         </p>
         <p>
             In a future release, MAP will also support folder and file operations directly
@@ -147,25 +147,25 @@
       <span class="material-icons icon">expand_more</span>
     </div>
     <div class="content">
-      <p>The activity log is available for file drop admins to see what actions users have performed in the file drop. You have the ability to refresh the page as needed. The most recent 30 days of activity is shown in reverse chronological order.  Pressing the "Download All" button will download all activity for the file drop to your browser as a csv.</p>
+      <p>The activity log is available for File Drop Admins to see what actions users have performed in the File Drop. You have the ability to refresh the page as needed. The most recent 30 days of activity is shown in reverse chronological order.  Pressing the "Download All" button will download all activity for the File Drop to your browser as a csv.</p>
       <h3 class="subheading">Definitions of Actions Shown in the Activity Log</h3>
       <p><strong>SFTP account created: </strong><br>A SFTP account was created</p>
       <p><strong>SFTP account deleted: </strong><br>A SFTP account was deleted</p>
       <p><strong>SFTP account added to permission group: </strong><br>A user was added to a permission group. A permission group can contain a group of users or be exclusively for single user</p>
-      <p><strong>SFTP account removed from permission group: </strong><br>A user was removed from a permission group. The affected user account and password are not destroyed but do lose access to the file drop until assigned to a new permission group</p>
+      <p><strong>SFTP account removed from permission group: </strong><br>A user was removed from a permission group. The affected user account and password are not destroyed but do lose access to the File Drop until assigned to a new permission group</p>
       <p><strong>SFTP account account password generated: </strong><br>A user generated a new password</p>
       <p><strong>SFTP authentication failed: </strong><br>A connection attempt was blocked due to unsuccessful authentication or lack of authorization</p>
-      <p><strong>File drop created: </strong><br>The file drop was created</p>
-      <p><strong>File drop updated: </strong><br>The file drop name and/or description was updated</p>
-      <p><strong>File drop permission group created: </strong><br>A file drop permission group (for either a group of users or a single user) was created</p>
-      <p><strong>File drop permission group deleted: </strong><br>A file drop permission group (for either a group of users or a single user) was deleted. Affected user accounts and passwords are not destroyed but do lose access to the file drop until assigned to a new permission group</p>
-      <p><strong>File drop permission group updated: </strong><br>A file drop permission group was updated, changing the name or description of the group</p>
+      <p><strong>File Drop created: </strong><br>The File Drop was created</p>
+      <p><strong>File Drop updated: </strong><br>The File Drop name and/or description was updated</p>
+      <p><strong>File Drop permission group created: </strong><br>A File Drop permission group (for either a group of users or a single user) was created</p>
+      <p><strong>File Drop permission group deleted: </strong><br>A File Drop permission group (for either a group of users or a single user) was deleted. Affected user accounts and passwords are not destroyed but do lose access to the File Drop until assigned to a new permission group</p>
+      <p><strong>File Drop permission group updated: </strong><br>A File Drop permission group was updated, changing the name or description of the group</p>
       <p><strong>SFTP directory created: </strong><br>A SFTP directory was created</p>
       <p><strong>SFTP directory removed: </strong><br>A SFTP directory was removed</p>
-      <p><strong>SFTP file upload authorized: </strong><br>A file was uploaded to the file drop</p>
-      <p><strong>SFTP file download authorized: </strong><br>A file was downloaded from the file drop</p>
-      <p><strong>SFTP file delete authorized: </strong><br>A file was deleted from the file drop</p>
-      <p><strong>SFTP file or directory renamed: </strong><br>A file or directory was renamed in the file drop</p>
+      <p><strong>SFTP file upload authorized: </strong><br>A file was uploaded to the File Drop</p>
+      <p><strong>SFTP file download authorized: </strong><br>A file was downloaded from the File Drop</p>
+      <p><strong>SFTP file delete authorized: </strong><br>A file was deleted from the File Drop</p>
+      <p><strong>SFTP file or directory renamed: </strong><br>A file or directory was renamed in the File Drop</p>
     </div>
   </body>
 </html>
