clarify that a client admin will have to update roles

--- a/Documentation/FileDropAdmin.html
+++ b/Documentation/FileDropAdmin.html
@@ -18,7 +18,7 @@
       <p>
         File Drop roles are set within a client. This means that the roles are
         set in the Client Administration tab of MAP. To set the roles for a
-        user of the client, navigate to the Client Administration tab, filter
+        user of the client, the Client Administrator will have to navigate to the Client Administration tab, filter
         to the client by clicking the client card, and then open the user card
         in the rightmost column. The user roles contain
         <strong>File Drop User</strong> and <strong>File Drop Admin</strong>.
