--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -62,78 +62,10 @@
             <li>Select the content item that you would to add a disclaimer to</li>
             <li>Click on the blue Update icon on the content card, or click on the <strong>Update Content Item</strong> icon in the upper right corner</li>
             <li>Input the desired disclaimer text in the "Custom Disclaimer Text" input field</li>
-            <li>If text formatting is desired, this can be accomplished through the use of markdown syntax</li>
+            <li>If text formatting is desired, this can be accomplished through the use of <a href="https://www.markdownguide.org/basic-syntax/" target="_blank">markdown syntax</a></li>
             <li>To preview the formatted disclaimer text, click the "Preview" button above the "Custom Disclaimer Text" text box</li>
             <li>Once you are satisfied with the disclaimer text and formatting, click the "CREATE CONTENT ITEM" or "UPDATE CONTENT ITEM" button</li>
         </ol>
-        <h3 class="subheading">Markdown Syntax:</h3>
-        <table id="syntax">
-            <tr>
-                <th>Element</th>
-                <th>Syntax</th>
-                <th>Result</th>
-            </tr>
-            <tr>
-                <td rowspan="3">Section Heading</td>
-                <td># H1</td>
-                <td><h1>H1</h1></td>
-            </tr>
-            <tr>
-                <td>## H2</td>
-                <td><h2>H2</h2></td>
-            </tr>
-            <tr>
-                <td>### H3</td>
-                <td><h3>H3</h3></td>
-            </tr>
-            <tr>
-                <td rowspan="2">Text Formatting</td>
-                <td>**Bold**</td>
-                <td><strong>Bold</strong></td>
-            </tr>
-            <tr>
-                <td>_Italics_</td>
-                <td><i>Italics</i></td>
-            </tr>
-            <tr>
-                <td>Link</td>
-                <td>[Milliman Access Portal](https://map.milliman.com)</td>
-                <td><a href="https://map.milliman.com" target="_blank">Milliman Access Portal</a></td>
-            </tr>
-            <tr>
-                <td rowspan="2">Lists</td>
-                <td>
-                    <ul>
-                        <li style="list-style: none;">1. First Item</li>
-                        <li style="list-style: none;">1. Second Item</li>
-                        <li style="list-style: none;">1. Third Item</li>
-                    </ul>
-                </td>
-                <td>
-                    <ol>
-                        <li>First Item</li>
-                        <li>Second Item</li>
-                        <li>Third Item</li>
-                    </ol>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <ul>
-                        <li style="list-style: none;">- First Item</li>
-                        <li style="list-style: none;">- Second Item</li>
-                        <li style="list-style: none;">- Third Item</li>
-                    </ul>
-                </td>
-                <td>
-                    <ul>
-                        <li>First Item</li>
-                        <li>Second Item</li>
-                        <li>Third Item</li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
     </div>
     <div class="accordion">
         <p>Deleting Content Items</p>
