--- a/Documentation/_TEMPLATES/user_guide_pandoc_template.html
+++ b/Documentation/_TEMPLATES/user_guide_pandoc_template.html
@@ -18,6 +18,7 @@
             <h1>$pagetitle$</h1>
             $body$
         </div>
+        <script src="./_JS/anchors.js"></script>
         <script src="./_JS/accordion.js"></script>
     </body>
 </html>
