Make some updates to the wording of the user guide around sorting

--- a/Documentation/ClientAccessReview.html
+++ b/Documentation/ClientAccessReview.html
@@ -10,7 +10,7 @@
     </div>
     <div class="content">
       <p>
-        When the page initially loads, the Client list will be sorted <strong>Chronologically Descending</strong>.  To change the sort order of the Client list, click on the sort icon at the top of the Client column which lies next to the Client filter input. Clicking on the sort icon will cycle through the available sort orders.
+        When the page initially loads, the Client list will be sorted <strong>Chronologically Descending</strong> by review due date.  To change the sort order of the Client list, click on the sort icon at the top of the Client column which lies next to the Client filter input. Clicking on the sort icon will cycle through the available sort orders.
       </p>
       <h4>Available Sort Orders:</h4>
       <ul>
@@ -21,10 +21,10 @@
           <strong>Chronologically Ascending:</strong> Clients with the least pressing Access Review due dates are sorted first.  IF a Client has sub-Clients, the entire Client group will be sorted according to the least pressing Access Review due date from the entire Client group.
         </li>
         <li>
-          <strong>Alphabetically Descending:</strong> Clients and sub-Clients are sorted alphabetically from A to Z.
+          <strong>Alphabetically Descending:</strong> Clients and sub-Clients are sorted alphabetically from A to Z by Client name.
         </li>
         <li>
-          <strong>Alphabetically Ascending:</strong> Clients and sub-Clients are sorted alphabetically from Z to A.
+          <strong>Alphabetically Ascending:</strong> Clients and sub-Clients are sorted alphabetically from Z to A by Client name.
         </li>
       </ul>
     </div>
