Start adding information for File Drop
Setting up the structure and populating areas as I go through the workflow

--- a/Documentation/FileDropAdmin.html
+++ b/Documentation/FileDropAdmin.html
@@ -72,6 +72,7 @@
       <span class="material-icons icon">expand_more</span>
     </div>
     <div class="content">
+      <p>In order to create, view, edit, or delete files and folders within the File Drop, you must first add yourself to the User Permissions tab with at least one permission selected.</p>
       <h3 class="subheading">Adding an Individual User to the File Drop</h3>
       <ol>
         <li>In the File Drop view, navigate to the File Drop that you want to add a user to</li>
@@ -130,16 +131,41 @@
       <span class="material-icons icon">expand_more</span>
     </div>
     <div class="content">
-        <p>
-            MAP File Drop features for uploading, downloading, and deleting folders and
-            files are supported using Secure File Transfer Protocol (SFTP). Use of an SFTP
-            client application such as FileZilla is the means to interact with the folders
-            and files of a MAP File Drop.
-        </p>
-        <p>
-            In a future release, MAP will also support folder and file operations directly
-            in the user interface.
-        </p>
+      <p>Note that you must first grant yourself at least one permission in a permission group within the File Drop in order to manage folders and files.</p>
+      <h3 class="subheading">Adding a Folder</h3>
+      <ol>
+        <li>Click on "Add Folder" under the Files tab</li>
+        <li>Enter a folder name</li>
+        <li>Enter a description (optional)</li>
+        <li>Press the checkmark to save or the "x" to cancel</li>
+      </ol>
+      <h3 class="subheading">Adding a File</h3>
+      <ol>
+        <li>Click on "Add File" under the Files tab</li>
+        <li>Choose file to upload</li>
+      </ol>
+      <p>You can cancel the upload of the file by pressing the "x" while it is uploading.</p>
+      <h3 class="subheading">Editing a Folder</h3>
+      <p>To edit a folder, first navigate to the folder under the Files tab.</p>
+      <ol>
+        <li>Click on the vertical ellipses under Actions for the folder to edit</li>
+        <li>Click on "Edit"</li>
+        <li>Edit the folder name and/or the description</li>
+        <li>To save, press the checkmark. To cancel, press the "x".</li>
+      </ol>
+      <h3 class="subheading">Navigating the Folder structure</h3>
+      <p>To move into a folder, click the folder name. To navigate back, click the folder you would like to navigate back to at the top of the Files box.</p>
+      <h3 class="subheading">Moving a File or Folder</h3>
+      <h3 class="subheading">Deleting a File or Folder</h3>
+      <h3 class="subheading">Viewing a File</h3>
+      <h3 class="subheading">Viewing a Folder</h3>
+      <h3 class="subheading">Managing a File Drop via SFTP</h3>
+      <p>
+          MAP File Drop features for uploading, downloading, and deleting folders and
+          files are supported using Secure File Transfer Protocol (SFTP). Use of an SFTP
+          client application such as FileZilla is the means to interact with the folders
+          and files of a MAP File Drop.
+      </p>
     </div>
     <div class="accordion">
       <p>Activity Log</p>
