Add details for moving a folder or file

--- a/Documentation/FileDropAdmin.html
+++ b/Documentation/FileDropAdmin.html
@@ -156,6 +156,16 @@
       <h3 class="subheading">Navigating the Folder structure</h3>
       <p>To move into a folder, click the folder name. To navigate back, click the folder you would like to navigate back to at the top of the Files box.</p>
       <h3 class="subheading">Moving a File or Folder</h3>
+      <ol>
+        <li>Click on the vertical ellipses under Actions for the file or folder to move</li>
+        <li>Click "Move"</li>
+        <li>There are several options that can be taken at this point. See below for various ways to move the file or folder:</li>
+        <ul>
+          <li><em>Navigating up the folder structure:</em> Use the breadcrumb links to navigate up the folder structure. Once you have navigated to the folder where you want to move the folder or file, press "Move"</li>
+          <li><em>Navigating down the folder structure:</em> Click the folder listed in the modal to enter that folder</li>
+          <li><em>Create a new folder:</em> Press "Create new folder" to create a folder within the folder you are currently in, enter the folder name and save, and then you can move the folder or file into the new folder</li>
+        </ul>
+      </ol>
       <h3 class="subheading">Deleting a File or Folder</h3>
       <h3 class="subheading">Viewing a File</h3>
       <h3 class="subheading">Viewing a Folder</h3>
