clarify why a user might not see all settings in My Settings
so that they can better understand why they can see it in some file drops, but not others

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -92,6 +92,7 @@
       <span class="material-icons icon">expand_more</span>
     </div>
     <div class="content">
+	  <p>Please note that you may not see each of the sections below. You must have at least one permission assigned (upload, download, delete) in order to view some of the information listed below.</p>
       <p><strong>SFTP Connection:</strong><br>This section provides connection details of MAP's SFTP server. Use these details to configure an SFTP Client application such as FileZilla</p>
       <p><strong>SFTP Credentials:</strong><br>This section displays your SFTP login information <u>for the currently displayed file drop</u>. Please note that the username is case sensitive</p>
       <p>The password can be reset at any time by clicking the button. The new password will be displayed and you can copy that to the clipboard using the provided button.&nbsp;
