include the delete action

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -71,7 +71,7 @@
       <ol>
         <li>Click on the vertical ellipses under Actions for the file or folder to delete</li>
         <li>Click "Delete"</li>
-        <li>... COME BACK TO THIS ...</li>
+        <li>Press "Delete" on the popup notification</li>
       </ol>
       <h3 class="subheading">Downloading a File</h3>
       <ol>
