Make changes based on Mikes suggestions
address Mike's suggestions for the user guide

--- a/Documentation/FileDropAdmin.html
+++ b/Documentation/FileDropAdmin.html
@@ -72,7 +72,7 @@
       <span class="material-icons icon">expand_more</span>
     </div>
     <div class="content">
-      <p>In order to create, view, edit, or delete files and folders within the File Drop, you must first add yourself to the User Permissions tab with at least one permission selected.</p>
+      <p>In order to create, view, edit, or delete files and folders within the File Drop, you must first add yourself to the User Permissions tab with the proper permissions enabled.</p>
       <h3 class="subheading">Adding an Individual User to the File Drop</h3>
       <ol>
         <li>In the File Drop view, navigate to the File Drop that you want to add a user to</li>
