Update the downloading a file section
include the ability to download via the overflow menu and move its location in the user guide to be higher up

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -45,6 +45,14 @@
         the folder you would like to navigate back to at the top of the Files
         box.
       </p>
+      <h3 class="subheading">Downloading a File</h3>
+      <ol>
+        <li>Navigate to the file to download</li>
+        <li>
+          Click on the filename to download or click on the vertical ellipses to
+          the right of the file to download and choose "Download"
+        </li>
+      </ol>
       <h3 class="subheading">Adding a Folder</h3>
       <ol>
         <li>Navigate to the location that you would like to add a folder</li>
@@ -121,11 +129,6 @@
         </li>
         <li>Click "Delete"</li>
         <li>Press "Delete" on the popup notification</li>
-      </ol>
-      <h3 class="subheading">Downloading a File</h3>
-      <ol>
-        <li>Navigate to the file to download</li>
-        <li>Click on the filename to download</li>
       </ol>
       <h3 class="subheading">Interacting with a File Drop via SFTP</h3>
       <p>
