Fix a small typo

--- a/Documentation/FileDrop.html
+++ b/Documentation/FileDrop.html
@@ -124,7 +124,7 @@
       <h3 class="subheading">Deleting a File or Folder</h3>
       <ol>
         <li>
-          Click on the vertical ellipses under to the right of the file or
+          Click on the vertical ellipses to the right of the file or
           folder to delete
         </li>
         <li>Click "Delete"</li>
