Added a clause to the user guide to help explain the new 'editable' toggle for PBI content items

--- a/Documentation/ContentAccessAdmin.html
+++ b/Documentation/ContentAccessAdmin.html
@@ -47,12 +47,21 @@
         <ol>
             <li>Navigate and select the Selection Group card</li>
             <li>For a selection group with access to the master version of the content, click the <strong>Unrestricted Access</strong> toggle to the <strong>ON</strong> position</li>
-            <li>For a selection group with access to a reduced version of the content (only applicable for reducible content):</li>
+            <li>
+              For a selection group with access to a reduced version of the content (only applicable for reducible content):
+              <ul>
+                <li>Click the <strong>Unrestricted Access</strong> toggle at the top right to the <strong>OFF</strong> position</li>
+                <li>Check the desired selections in the <strong>Selections</strong> column to the right.</li>
+              </ul>
+            </li>
+            <li>
+              For a selection group with access to an editable version of the content (only applicable for Power BI content):
+              <ul>
+                <li>Click the <strong>Editable</strong> toggle at the top right to the <strong>ON</strong> position</li>
+                <li>Note: This option will only be available if the content item is published as 'editable' by a <strong>Content Publisher.</strong></li>
+              </ul>
+            </li>
         </ol>
-        <ul>
-            <li>Click the <strong>Unrestricted Access</strong> toggle at the top right to the <strong>OFF</strong> position</li>
-            <li>Check the desired selections in the <strong>Selections</strong> column to the right.</li>
-        </ul>
     </div>
     <div class="accordion">
         <p>Suspending Access For a Selection Group</p>
