--- a/Documentation/ClientAccessReview.html
+++ b/Documentation/ClientAccessReview.html
@@ -71,5 +71,28 @@
       </ul>
       <p><strong>Note: </strong>Failure to complte a Client Access Review in a timely manner will lead to the suspension of content access until the Client Access Review is completed.</p>
     </div>
+    <div class="accordion">
+      <p>Exporting Client Access Review Summaries</p>
+      <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+      <p>
+        Client Admins have the ability to export the information found in a Client Access Review by clicking on the <b>Download Client Access Summary</b> button on the Client card,
+        or by clicking on the <b>Download Client Access Summary</b> button within the view while a Client is selected. This action will download a ZIP file containing the following files:
+        <ul>
+          <li><b>Client Summary.txt:</b> This file contains summary information about the current Client.</li>
+          <li><b>Client Access Review Summary Metadata.txt:</b> This file contains information about the currently exported Client Access Review Summary, such as the name of the exporter and the date the export was created.</li>
+          <li><b>User Roles.csv:</b> This file contains rows which list all users within the Client and their corresponding roles.</li>
+          <li><b>Content Access.csv:</b> This file contains rows which list all content items belonging to the Client with information about their selection groups and users.</li>
+          <li><b>File Drop Access.csv:</b> This file contains rows which list all the File Drops belonging to the Client with information about their permission groups and users.</li>
+        </ul>
+      </p>
+      <p>
+        <strong>Note: </strong>
+        The information contained in this zip file represents a snapshot of the Client information at the time of export.
+        <br>
+        Viewing this information does not qualify as a Client Access Review.
+      </p>
+    </div>
   </body>
 </html>
