Update user guide

--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -79,5 +79,16 @@
             <li>Press the <strong>Confirm Deletion</strong> to confirm the deletion</li>
         </ol>
     </div>
+    <div class="accordion">
+        <p>Downloading Editable Content</p>
+        <span class="material-icons icon">expand_more</span>
+    </div>
+    <div class="content">
+        <p>Content Publishers who have published Power BI Content Items marked as 'Editable' have the ability to download the current version of the document at any point.</p>
+        <ul>
+            <li>Select the client for which the content item has been published in the <strong>Clients</strong> column on the left side</li>
+            <li>Click the <strong>Download Editable Power BI Content Item</strong> icon in the upper right corner</li>
+        </ul>
+    </div>
 </body>
 </html>
