User guide/file name changes

--- a/Documentation/ClientAccessReview.html
+++ b/Documentation/ClientAccessReview.html
@@ -80,11 +80,11 @@
         Client Admins have the ability to export the information found in a Client Access Review by clicking on the <b>Download Client Access Summary</b> button on the Client card,
         or by clicking on the <b>Download Client Access Summary</b> button within the view while a Client is selected. This action will download a ZIP file containing the following files:
         <ul>
-          <li><b>Client Summary.txt:</b> This file contains summary information about the current Client.</li>
-          <li><b>Client Access Review Summary Metadata.txt:</b> This file contains information about the currently exported Client Access Review Summary, such as the name of the exporter and the date the export was created.</li>
-          <li><b>User Roles.csv:</b> This file contains rows which list all users within the Client and their corresponding roles.</li>
-          <li><b>Content Access.csv:</b> This file contains rows which list all content items belonging to the Client with information about their selection groups and users.</li>
-          <li><b>File Drop Access.csv:</b> This file contains rows which list all the File Drops belonging to the Client with information about their permission groups and users.</li>
+          <li><b>Client_Summary.txt:</b> This file contains summary information about the current Client.</li>
+          <li><b>Client_Access_Review_Summary_Metadata.txt:</b> This file contains information about the currently exported Client Access Review Summary, such as the name of the exporter and the date the export was created.</li>
+          <li><b>User_Roles.csv:</b> This file contains rows which list all users within the Client and their corresponding roles.</li>
+          <li><b>Content_Access.csv:</b> This file contains rows which list all content items belonging to the Client with information about their selection groups and users.</li>
+          <li><b>File_Drop_Access.csv:</b> This file contains rows which list all of the File Drops belonging to the Client with information about their permission groups and users.</li>
         </ul>
       </p>
       <p>
