Added some error handling for creating Client Access Review Summaries

--- a/Documentation/ClientAccessReview.html
+++ b/Documentation/ClientAccessReview.html
@@ -69,7 +69,7 @@
           <p>Review the displayed attestation language.  By clicking <strong>COMPLETE REVIEW</strong> you are indicating that you have approved the Client Access Review and agree to the terms laid out in the attestation language. This action, and your attestation, will be recorded at this point, and the Client Access Review due date will be reset.</p>
         </li>
       </ul>
-      <p><strong>Note: </strong>Failure to complte a Client Access Review in a timely manner will lead to the suspension of content access until the Client Access Review is completed.</p>
+      <p><strong>Note: </strong>Failure to complete a Client Access Review in a timely manner will lead to the suspension of content access until the Client Access Review is completed.</p>
     </div>
     <div class="accordion">
       <p>Exporting Client Access Review Summaries</p>
