User guide update mentioning Power BI Row Level Security

--- a/Documentation/ContentPublishing.html
+++ b/Documentation/ContentPublishing.html
@@ -17,8 +17,13 @@
                 <ul>
                     <li>Field names designated with <strong>*</strong> are required fields</li>
                     <li>In the <strong>Files</strong> area of the form, click on a field for a prompt to upload a file</li>
-                    <li>If the content is intended to be reduced, click the <strong>Reducible</strong> toggle to the <strong>ON</strong> position (QlikView only)</li>
-                    <li>After the content item is saved, the content type and <strong>Reducible</strong> status cannot be changed</li>
+                    <li>The following content types support publication of documents in "reducible" fashion.  If the content is intended to be reduced, do the following:
+                        <ul>
+                            <li>Set the <strong>Reducible</strong> toggle to the <strong>ON</strong> position (QlikView)</li>
+                            <li>Check the <strong>Row Level Security</strong> check box (Power BI)</li>
+                        </ul>
+                    </li>
+                    <li>After the content item is saved, <strong>the content type and Reducible status cannot be changed</strong></li>
                     <li>The <strong>Content Description</strong> field is for text that will appear on the Content Item card for all users with access to the content</li>
                     <li>The <strong>Custom Content Disclaimer</strong> field is the text that will be presented to end users and must be accepted before accessing the content; This field accepts markdown syntax for advanced styling</li>
                     <li>The <strong>Internal Notes</strong> field is for text that will only appear on the publishing page and can serve as notes for publishing users</li>
